[tool.poetry]
name = "mkm3u"
version = "0.1.0"
description = ""
authors = ["Tim Martin <tim@timmart.in>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.1.0"
mypy = "^0.931"
flake8 = "^4.0.1"
pylint = "^2.12.2"
isort = "^5.10.1"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mkm3u = "mkm3u:main"
